# CompiledAI

./: .env.example  .gitignore  BENCHMARK_ANALYSIS.md  BENCHMARK_PLAN.md  CITATION.cff  CLEANUP_PLAN.md  ESSENTIALS.md  LICENSE  README.md  benchmark_docile_compiled.py  pyproject.toml  run_benchmark.py  run_hybrid_benchmark.py  test_email_extractor.py
.claude/: CLAUDE.md
.pr-review-temp/: DECISION_MATRIX.md  PR_ANALYSIS.md
analytics/: bg_tables.drawio  requirements.txt  table_defs.py
literature/: README.md  agent-failures.md  bitter-lesson.md  code-benchmarks.md  constrained-generation.md  workflow-automation.md
paper/: compiled_ai_arxiv_paper_v2.tex  compiled_ai_arxiv_paper_v3.5.tex  compiled_ai_arxiv_paper_v3.tex  compiled_ai_arxiv_paper_v4.tex  compiled_ai_arxiv_paper_v5.tex  compiled_ai_arxiv_paper_v6.tex  compiled_ai_arxiv_paper_v7.tex  compiled_ai_arxiv_paper_v8.tex  compiled_ai_paper.md  docile_calculation_trace.md  framework.md  latex_search.txt  related-work.md
paper_sections/: docile_case_study.md
results/: autogen_bfcl_v4_1769167953.json  autogen_bfcl_v4_1769175624.json  autogen_bfcl_v4_1769179850.json  autogen_bfcl_v4_1769189953.json  autogen_bfcl_v4_1769439421.json  autogen_docile_kile_1769457825.json  autogen_docile_kile_1769470008.json  autogen_docile_kile_1769471845.json  autogen_docile_lir_1769457766.json  autogen_docile_lir_1769470241.json  autogen_docile_lir_1769473203.json  autogen_xy_benchmark_1768605303.json  autogen_xy_benchmark_1768605377.json  autogen_xy_benchmark_1768605415.json  autogen_xy_benchmark_1768605768.json  code_factory_docile_kile_1769767752.json  code_factory_docile_kile_1769768466.json  code_quality_benchmark_20260129_143759.json  compiled_docile_full_1769850445.json  (+49 more)
src/compiled_ai/factory/XYLocalWorkflowExecutor/: README.md  pyproject.toml
src/compiled_ai/factory/XYLocalWorkflowExecutor/examples/: data_processing_workflow.yaml  sample_workflow.yaml  text_processing_workflow.yaml
src/compiled_ai/factory/XYLocalWorkflowExecutor/examples/data/: customers.json
src/compiled_ai/factory/XYLocalWorkflowExecutor/examples/output/: sample_input.txt  summary.txt  uppercase_output.txt
src/compiled_ai/factory/XYLocalWorkflowExecutor/scripts/: run_workflow.py
src/compiled_ai/factory/XYLocalWorkflowExecutor/src/xy_local_executor/: __init__.py  activities.py  benchmarking.py  cli.py  executor.py  mocks.py
src/compiled_ai/factory/XYLocalWorkflowExecutor/src/xy_local_executor/dsl/: __init__.py  execution.py  models.py  parser.py  template.py
src/compiled_ai/factory/XYLocalWorkflowExecutor/tests/: __init__.py
(+4649 files in other folders)
