[project]
name = "xy-local-executor"
version = "0.1.0"
description = "Lightweight local executor for DSL workflows - no Temporal, no database"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21",
]

[project.scripts]
xy-workflow = "xy_local_executor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xy_local_executor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
